--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^13.8.0",
     "aos": "^3.0.0-beta.6",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
